@@ -2,6 +2,8 @@ Revision history for Perl extension JavaScript-V8-CommonJS
 
 {{$NEXT}}
 
+    - constructor now accepts v8_params hashref value
+
 0.04 2018-05-14T17:54:58Z
 
     - fixed eval() first stack item line manipulation
